NIFI-13996 Added directory deletion to TestPutSQL
- Streamlined directory resolution for Excel tests