@@ -28,7 +28,6 @@ import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.io.File;
 import java.io.IOException;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
@@ -56,7 +55,7 @@ public class TestSplitExcel {
      */
     @AfterAll
     public static void cleanUpAfterAll() {
-        final Path tempDir = Paths.get(System.getProperty("java.io.tmpdir") + File.separator + "poifiles");
+        final Path tempDir = Path.of(System.getProperty("java.io.tmpdir")).resolve("poifiles");
         try (DirectoryStream<Path> directoryStream = newDirectoryStream(tempDir, "tmp-[0-9]*.xlsx")) {
             for (Path tmpFile : directoryStream) {
                 Files.deleteIfExists(tmpFile);
